--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "node app.js",
-	"dev": "nodemon index.js"
+    "dev": "nodemon app.js"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "eslint": "^7.17.0",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.22.0",
+    "nodemon": "^2.0.7"
   }
 }
