--- a/package.json
+++ b/package.json
@@ -3,16 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "express": "^4.17.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "express": "^4.17.1"
   },
   "scripts": {
     "start": "node app.js",
@@ -38,7 +29,9 @@
   },
   "devDependencies": {
     "eslint": "^7.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.7"
   }
 }
