--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,8 @@
 {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "es2021": true,
-    "node": true
-  },
   "extends": [
-	"airbnb-base",
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 12
-  },
-  "plugins": [
-    "react"
+	"airbnb-base"
   ],
   "rules": {
-    "no-console": 0,
     "no-underscore-dangle": 0
   }
 }
